# aion-python-sdk

./: .gitignore  AGENTS.md  Makefile  README.md  langgraph.json.example  pyproject.toml
libs/aion-adapter-langgraph/: pyproject.toml
libs/aion-adapter-langgraph/src/aion/langgraph/: __init__.py  executor.py
libs/aion-agent-api/: README.md  langgraph.json.example  pyproject.toml
libs/aion-agent-api/src/aion_agent_api/: __init__.py  logging.py  server.py
libs/aion-agent-api/tests/: test_graphs.py  test_logging.py  test_public_api.py  test_server.py
libs/aion-agent-cli/: README.md  pyproject.toml
libs/aion-agent-cli/src/aion/cli/: __init__.py  cli.py
libs/aion-agent-cli/src/aion_agent_cli/: __init__.py  cli.py
libs/aion-agent-cli/tests/: test_cli.py
libs/aion-api-client/: README.md  aion_api_client.yaml  pyproject.toml
libs/aion-api-client/gql/: graphql.schema  queries.graphql  schema.graphql
libs/aion-api-client/src/aion/: __init__.py
libs/aion-api-client/src/aion/api/: __init__.py  exceptions.py  model_service_client.py
libs/aion-api-client/src/aion/api_client/: __init__.py  client.py  settings.py
libs/aion-api-client/src/aion/gql/: __init__.py  client.py
libs/aion-api-client/tests/: conftest.py  test_aion_gql_client.py  test_client.py  test_control_plane.py  test_generated_graphql_support.py  test_model_service_client.py
libs/aion-authoring-adk/: README.md  pyproject.toml
libs/aion-authoring-adk/tests/: test_event_metadata.py  test_mcp_toolsets.py  test_models.py  test_namespace_exports.py  test_stream.py  test_thread_routing.py
libs/aion-cli/: README.md  pyproject.toml
libs/aion-cli/src/aion/: __init__.py
libs/aion-cli/src/aion/cli/: cli.py
libs/aion-cli/tests/: conftest.py  test_cli.py
libs/aion-cli/tests/services/chat2/: test_launcher.py
libs/aion-core/: README.md  pyproject.toml
libs/aion-core/src/aion/core/: __init__.py  a2a.py  db.py  metaclasses.py  settings.py
libs/aion-core/tests/: conftest.py  test_db_protocol.py  test_metaclasses.py  test_settings.py
libs/aion-core/tests/a2a/: test_a2a_types.py
libs/aion-core/tests/agent/invocation/: test_card.py
libs/aion-core/tests/runtime/: test_registry.py  test_runtime_context.py
libs/aion-core/tests/utils/: test_card.py
libs/aion-db/: pyproject.toml
libs/aion-db/src/aion/db/: __init__.py  settings.py
libs/aion-db/tests/: conftest.py  test_settings.py
libs/aion-mcp/: README.md  pyproject.toml
libs/aion-mcp/src/aion/: __init__.py
libs/aion-mcp/src/aion/mcp/: __init__.py  (+2 more)
libs/aion-mcp/tests/: conftest.py  test_endpoints.py  test_proxy.py
libs/aion-plugin-adk/: README.md  pyproject.toml
libs/aion-plugin-langgraph/: README.md  pyproject.toml
libs/aion-sdk/: README.md  pyproject.toml
libs/aion-sdk/tests/: conftest.py  test_cli.py
libs/aion-server/: .env.example  README.md  pyproject.toml
libs/aion-server-adk/: README.md  pyproject.toml
libs/aion-server-adk/tests/: test_event_converter_routing.py
libs/aion-server-langgraph/: .env.example  README.md  aion.yaml.example  pyproject.toml
libs/aion-server-langgraph/tests/: conftest.py  helpers.py  test_a2a_to_lc.py  test_adapter.py  test_currency_agent.py  test_db.py  test_dynamic_mounter.py  test_event_converter.py  test_graphs.py  test_langgraph_agent.py  test_logging.py  test_main.py  test_migrations_env.py  test_package_data.py  test_plugin.py  test_public_api.py  test_result_handler.py  test_server.py  test_state_adapter.py  test_transformer.py  test_yaml_loader.py
libs/aion-server-langgraph/tests/checkpoint/: test_factory.py
libs/aion-server-langgraph/tests/config/: test_aion_platform_settings.py  test_app_settings.py
libs/aion-server-langgraph/tests/converters/: test_a2a_to_lc.py  test_lc_to_a2a.py
libs/aion-server-langgraph/tests/execution/: conftest.py  test_event_converter.py  test_event_preprocessor.py  test_langgraph_executor.py  test_result_handler.py  test_stream_executor.py  test_transformer.py
libs/aion-server-langgraph/tests/state/: test_adapter.py  test_extractors.py
libs/aion-server/tests/: conftest.py  test_settings.py
libs/aion-server/tests/a2a/: test_a2a_utils.py
libs/aion-server/tests/agent/: test_adapter_registry.py  test_agent_card.py  test_agent_exceptions.py  test_agent_messages.py  test_aion_agent.py  test_execution_scope.py  test_execution_scope_provider.py  test_execution_state.py  test_module_loader.py  test_plugin_protocols.py  test_request_context_builder.py
libs/aion-server/tests/config/: test_app_settings.py  test_config_collectors.py  test_config_models.py  test_config_reader.py  test_db_settings.py
libs/aion-server/tests/files/: test_file_storage.py
libs/aion-server/tests/logging/: test_logging.py  test_logging_utils.py
libs/aion-server/tests/opentelemetry/: test_tracing.py
libs/aion-server/tests/plugins/: test_plugin_registry.py
libs/aion-server/tests/tasks/: test_deduplicator.py
libs/aion-server/tests/utils/: test_deployment.py  test_ports.py  test_process_manager.py  test_pydantic_utils.py  test_utils.py
libs/aion-shared/: pyproject.toml
libs/aion-shared/tests/: test_db_protocol.py  test_metaclasses.py  test_services.py  test_settings.py
libs/aion-shared/tests/a2a/: test_a2a_types.py  test_a2a_utils.py
libs/aion-shared/tests/agent/: test_adapter_registry.py  test_agent_card.py  test_agent_exceptions.py  test_agent_messages.py  test_aion_agent.py  test_execution_scope.py  test_execution_state.py  test_module_loader.py  test_plugin_protocols.py
libs/aion-shared/tests/config/: test_config_collectors.py  test_config_models.py  test_config_reader.py
libs/aion-shared/tests/files/: test_file_storage.py
libs/aion-shared/tests/logging/: test_logging.py  test_logging_utils.py
libs/aion-shared/tests/opentelemetry/: test_tracing.py
libs/aion-shared/tests/plugins/: test_plugin_registry.py
libs/aion-shared/tests/runtime/: test_runtime_context.py
libs/aion-shared/tests/tasks/: test_deduplicator.py
libs/aion-shared/tests/utils/: test_deployment.py  test_ports.py  test_process_manager.py  test_pydantic_utils.py  test_utils.py
(+1000 files in other folders)
