[tool.poetry]
name = "aion-adapter-langgraph"
version = "0.1.0"
description = ""
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{ include = "aion", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12.0"
langgraph = "^0.3.9"
langgraph-checkpoint-postgres = "^2.0.21"
langchain-openai = "^0.3.27"
aion-shared = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-shared" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
