[tool.poetry]
name = "aion-agent-cli"
version = "0.1.0"
description = "Command line interface for the Aion Python SDK"
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{include = "aion_agent_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
aion-agent-api = {path = "../aion-agent-api"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aion = "aion_agent_cli.cli:cli"
