[tool.poetry]
name = "aion-api-client"
version = "0.1.0"
description = "Websocket GraphQL client for the Aion API"
authors = ["Terminal Research Team <support@terminal.exchange>"]
homepage = "https://github.com/Terminal-Research/aion-python-sdk"
readme = "README.md"
packages = [{ include = "aion", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.2.5"
gql = "^3.5.0"
ariadne-codegen = {version = "^0.14.0", extras = ["subscriptions"]}
PyJWT = "^2.8.0"
httpx = "^0.28.1"
pydantic = "^2.10.6"
websockets = "^11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.ariadne-codegen]
schema_path = "gql/schema.graphql"
queries_path = "gql/queries.graphql"
target_package_path = "src/aion/gql/generated"
async_client = true
enable_custom_operations = true
opentelemetry_client = true
plugins = ["ariadne_codegen.contrib.extract_operations.ExtractOperationsPlugin"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
