[tool.poetry]
name = "aion-api-client"
version = "0.1.0"
description = "Websocket GraphQL client for the Aion API"
authors = ["Terminal Research Team <support@terminal.exchange>"]
homepage = "https://github.com/Terminal-Research/aion-python-sdk"
readme = "README.md"
packages = [{ include = "aion", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12.0"
gql = "3.5.3"
ariadne-codegen = {version = "^0.14.0", extras = ["subscriptions"]}
PyJWT = "2.10.1"
httpx = "0.28.1"
pydantic = "2.11.3"
websockets = "11.0.3"

aion-shared = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "fixes/resolve_packages_installation", subdirectory = "libs/aion-shared" }

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"

[tool.ariadne-codegen]
schema_path = "gql/schema.graphql"
queries_path = "gql/queries.graphql"
target_package_path = "src/aion/api/gql/generated"
client_name="GqlClient"
async_client = true
enable_custom_operations = true
opentelemetry_client = true
plugins = ["ariadne_codegen.contrib.extract_operations.ExtractOperationsPlugin"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
