[tool.poetry]
name = "aion-cli"
version = "0.1.0"
description = "Command line interface for the Aion Python SDK"
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{include = "aion", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.0"
aion-server = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "fixes/resolve_packages_installation", subdirectory = "libs/aion-server" }
aion-plugin-langgraph = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "fixes/resolve_packages_installation", subdirectory = "libs/aion-plugin-langgraph", optional = true }
click = "8.2.1"
asyncclick = "8.2.2.2"

[tool.poetry.extras]
langgraph = ["aion-plugin-langgraph"]
all = ["aion-plugin-langgraph"]

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aion = "aion.cli.cli:cli"
