[tool.poetry]
name = "aion-cli"
version = "0.1.0"
description = "Command line interface for the Aion Python SDK"
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{ include = "aion", from = "src" }]
include = ["src/aion/cli/bin/*"]

[tool.poetry.dependencies]
python = "^3.12.0"
# [ORIGINAL-DEP] aion-server = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-server" }
# [LOCAL-DEP]
aion-server = { path = "../aion-server", develop = true }
# [ORIGINAL-DEP] aion-langgraph = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-langgraph", optional = true }
# [LOCAL-DEP]
aion-langgraph = { path = "../aion-langgraph", develop = true, optional = true }
# [ORIGINAL-DEP] aion-server-langgraph = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-server-langgraph", optional = true }
# [LOCAL-DEP]
aion-server-langgraph = { path = "../aion-server-langgraph", develop = true, optional = true }
# [ORIGINAL-DEP] aion-plugin-adk = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-plugin-adk", optional = true }
# [LOCAL-DEP]
aion-plugin-adk = { path = "../aion-plugin-adk", develop = true, optional = true }
asyncclick = "^8.0.1.2"

[tool.poetry.extras]
langgraph = ["aion-langgraph", "aion-server-langgraph"]
adk = ["aion-plugin-adk"]
all = [
    "aion-langgraph",
    "aion-server-langgraph",
    "aion-plugin-adk"
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aion = "aion.cli.cli:cli"
