[tool.poetry]
name = "aion-core"
version = "0.1.0"
description = "AION SDK core — types, constants, protocols, and smart logger"
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{ include = "aion", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12.0"
pydantic = ">=2.11.3"
pydantic-settings = ">=2.3.4"
python-dotenv = ">=1.0.1"
PyYAML = "^6.0.0"
a2a-sdk = "^1.0.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24"
pytest-cov = "^7.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
