[tool.poetry]
name = "aion-mcp"
version = "0.1.0"
description = "Helper for mounting an MCP proxy from configuration"
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{include = "aion", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.0"
aion-api-client = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-api-client" }
asgi-proxy-lib = "*"
PyYAML = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
