[tool.poetry]
name = "aion-mcp"
version = "0.1.0"
description = "Aion MCP proxy and remote endpoint utilities"
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{include = "aion", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.0"
aion-api-client = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-api-client" }
asgi-proxy-lib = "*"
PyYAML = "*"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
