[tool.poetry]
name = "aion-plugin-langgraph"
version = "0.1.0"
description = ""
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{ include = "aion", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12.0"
# todo update langgraph code to be able to work with recent packages
langgraph = ">=0.3.1,<=0.4.10"
langgraph-checkpoint-postgres = ">=2.0.0,<=3.0.1"
aion-shared = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-shared" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
