[tool.poetry]
name = "aion-plugin-langgraph"
version = "0.1.0"
description = ""
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{ include = "aion", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12.0"
langgraph = ">=0.6.0,<=1.0.5"
langgraph-checkpoint-postgres = ">=2.0.0,<=3.0.2"
langserve = { version = "^0.3.3", extras = ["server"] }
aion-shared = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-shared" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
