[tool.poetry]
name = "aion-sdk"
version = "0.1.0"
description = "Command line interface for the Aion Python SDK"
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{ include = "aion", from = "src" }]
include = ["src/aion/cli/bin/*"]

[tool.poetry.dependencies]
python = "^3.12.0"
aion-core = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-core" }
aion-authoring-langgraph = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-authoring-langgraph", optional = true }
aion-server-langgraph = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-server-langgraph", optional = true }
aion-authoring-adk = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-authoring-adk", optional = true }
aion-server-adk = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-server-adk", optional = true }
asyncclick = "^8.0.1.2"
keyring = ">=25.0.0"

[tool.poetry.extras]
langgraph-authoring = ["aion-authoring-langgraph"]
langgraph-server = ["aion-server-langgraph"]
adk-authoring = ["aion-authoring-adk"]
adk-server = ["aion-server-adk"]
all = [
    "aion-authoring-langgraph",
    "aion-server-langgraph",
    "aion-authoring-adk",
    "aion-server-adk"
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aion = "aion.cli.cli:cli"
