[tool.poetry]
name = "aion-server-langgraph"
version = "0.1.0"
description = "Aion server-side LangGraph integration"
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{ include = "aion", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12.0"
langgraph = ">=0.6.0,<=1.0.5"
langgraph-checkpoint-postgres = ">=2.0.0,<=3.0.2"
aion-authoring-langgraph = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-authoring-langgraph" }
aion-db = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-db" }
aion-core = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-core" }
aion-server = { git = "https://github.com/Terminal-Research/aion-python-sdk", branch = "main", subdirectory = "libs/aion-server" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
