[tool.poetry]
name = "aion-shared"
version = "0.1.0"
description = ""
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{ include = "aion", from = "src" }]

[tool.poetry.dependencies]
python = "3.13.5"
pydantic = "2.11.3"
pydantic-settings = "2.10.1"
python-dotenv = "1.1.1"
a2a-sdk = { extras = ["telemetry"], version = "0.3.5" }
langgraph = "0.3.9"
aiohttp = "3.12.15"
python-logstash-async = "4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
