[tool.poetry]
name = "aion-shared"
version = "0.1.0"
description = ""
authors = ["Terminal Research Team <support@terminal.exchange>"]
readme = "README.md"
packages = [{ include = "aion", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12.0"
pydantic = ">=2.11.3"
pydantic-settings = ">=2.3.4"
python-dotenv = ">=1.0.1"
a2a-sdk = { extras = ["telemetry", "http-server"], version = "^0.3.4" }
python-logstash-async = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
